--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -16,13 +16,17 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="16dp">
 
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:background="@drawable/card_bg"
             android:contentDescription="@string/useravatar"
-            android:src="@drawable/ic_launcher_background"
+            android:padding="15dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/back"
             tools:ignore="ImageContrastCheck" />
 
         <View
@@ -33,20 +37,26 @@
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:background="@drawable/card_bg"
             android:contentDescription="@string/useravatar"
-            android:src="@drawable/ic_launcher_background"
+            android:padding="10dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/edit"
             tools:ignore="ImageContrastCheck" />
     </LinearLayout>
 
     <!--    User Avatar-->
 
-    <ImageView
+    <androidx.cardview.widget.CardView
         android:id="@+id/userAvatar"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="30dp"
         android:contentDescription="@string/useravatar"
+        android:foreground="@drawable/img8"
+        android:scaleType="centerCrop"
         android:src="@drawable/img1"
+        app:cardCornerRadius="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/topAppBar" />
@@ -55,9 +65,10 @@
         android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="@string/name"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userAvatar" />
@@ -66,9 +77,11 @@
         android:id="@+id/userPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/userPhone"
-        android:textSize="20sp"
+        android:textColor="#809997"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userName" />
@@ -79,37 +92,58 @@
         android:id="@+id/userContactButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userPhone">
 
-        <androidx.cardview.widget.CardView
+        <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginEnd="20dp"
-            android:foreground="@drawable/img2"
+            android:background="@drawable/card_bg"
+            android:backgroundTint="#4CAF50"
+            android:contentDescription="@string/todo"
+            android:scaleType="centerInside"
+            android:src="@drawable/chatlol"
             app:cardCornerRadius="16dp"
             tools:ignore="VisualLintBounds" />
 
-        <androidx.cardview.widget.CardView
+        <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginEnd="20dp"
-            android:foreground="@drawable/img2"
-            app:cardCornerRadius="16dp" />
+            android:background="@drawable/card_bg"
+            android:backgroundTint="#3244A9"
+            android:contentDescription="@string/todo"
+            android:scaleType="centerInside"
+            android:src="@drawable/call"
+            app:cardCornerRadius="16dp"
+            tools:ignore="VisualLintBounds" />
 
-        <androidx.cardview.widget.CardView
+        <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginEnd="20dp"
-            android:foreground="@drawable/img2"
-            app:cardCornerRadius="16dp" />
+            android:background="@drawable/card_bg"
+            android:backgroundTint="#DE3939"
+            android:contentDescription="@string/todo"
+            android:scaleType="centerInside"
+            android:src="@drawable/video"
+            app:cardCornerRadius="16dp"
+            tools:ignore="VisualLintBounds" />
 
-        <androidx.cardview.widget.CardView
+        <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:foreground="@drawable/img2"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/card_bg"
+            android:backgroundTint="#BDCEDC"
+            android:contentDescription="@string/todo"
+            android:scaleType="centerInside"
+            android:src="@drawable/email_icon"
             app:cardCornerRadius="16dp"
             tools:ignore="VisualLintBounds" />
     </LinearLayout>
@@ -118,18 +152,18 @@
     <View
         android:id="@+id/horizontalLine"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
+        android:layout_marginVertical="20dp"
         android:layout_marginTop="10dp"
- android:layout_marginVertical="20dp"
-        android:background="#ccc"
-        app:layout_constraintTop_toBottomOf="@id/userContactButtons"/>
+        android:background="#EDF1F2"
+        app:layout_constraintTop_toBottomOf="@id/userContactButtons" />
 
     <LinearLayout
         android:id="@+id/mobile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -148,7 +182,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/name"
-                android:textSize="20sp" />
+                android:textColor="#809997"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -162,14 +197,14 @@
             android:layout_height="30dp"
             android:layout_marginEnd="20dp"
             android:contentDescription="@string/todo"
-            android:src="@drawable/search"
+            android:src="@drawable/chat"
             tools:ignore="ImageContrastCheck" />
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:contentDescription="@string/todo"
-            android:src="@drawable/search"
+            android:src="@drawable/call"
             tools:ignore="ImageContrastCheck" />
     </LinearLayout>
 
@@ -178,8 +213,8 @@
         android:id="@+id/homeNormalCall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -197,8 +232,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/name"
-                android:textSize="20sp" />
+                android:text="@string/home"
+                android:textColor="#809997"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -212,13 +248,13 @@
             android:layout_height="30dp"
             android:layout_marginEnd="20dp"
             android:contentDescription="@string/todo"
-            android:src="@drawable/search" />
+            android:src="@drawable/chat" />
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:contentDescription="@string/todo"
-            android:src="@drawable/search"
+            android:src="@drawable/call"
             tools:ignore="ImageContrastCheck" />
     </LinearLayout>
 
@@ -226,8 +262,8 @@
         android:id="@+id/homeVideolCall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -245,8 +281,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/name"
-                android:textSize="20sp" />
+                android:text="@string/home"
+                android:textColor="#809997"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -258,43 +295,38 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="20dp"
             android:contentDescription="@string/todo"
-            android:src="@drawable/search"
-            tools:ignore="ImageContrastCheck" />
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:contentDescription="@string/todo"
-            android:src="@drawable/search"
+            android:src="@drawable/video"
             tools:ignore="ImageContrastCheck" />
     </LinearLayout>
 
     <!--    Share Buttons -->
 
     <LinearLayout
-        android:layout_marginStart="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="70dp"
         android:baselineAligned="false"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/homeVideolCall">
 
         <LinearLayout
-            android:gravity="fill_horizontal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="fill_horizontal"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-     android:layout_gravity="center"
+            <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:layout_gravity="center"
                 android:layout_marginEnd="20dp"
-                android:foreground="@drawable/img2"
+                android:background="@drawable/card_bg"
+                android:padding="10dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/location"
                 app:cardCornerRadius="16dp" />
 
             <TextView
@@ -309,19 +341,23 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
+            <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:layout_gravity="center"
                 android:layout_marginEnd="20dp"
-                android:foreground="@drawable/img2"
+                android:background="@drawable/card_bg"
+                android:padding="10dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/qr"
                 app:cardCornerRadius="16dp" />
 
             <TextView
-                android:paddingStart="8dp"
-                android:textAlignment="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="18dp"
                 android:text="@string/qr_code"
+                android:textAlignment="center"
                 tools:ignore="RtlSymmetry" />
         </LinearLayout>
 
@@ -331,12 +367,15 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
+            <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:layout_marginEnd="20dp"
-                android:foreground="@drawable/img2"
+                android:background="@drawable/card_bg"
+                android:padding="10dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/send"
                 app:cardCornerRadius="16dp" />
 
             <TextView
