--- a/app/src/main/res/layout/user_list_item_layout.xml
+++ b/app/src/main/res/layout/user_list_item_layout.xml
@@ -3,37 +3,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="5dp"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
-    <ImageView
+    <androidx.cardview.widget.CardView
         android:id="@+id/userImg"
         android:layout_width="80dp"
+        app:cardCornerRadius="10dp"
+        android:foreground="@drawable/img8"
         android:layout_height="80dp"
-        android:background="@drawable/rounded_image"
+        android:background="@drawable/card_bg"
         android:scaleType="centerInside"
         android:src="@drawable/img1" />
 
     <LinearLayout
+        android:layout_marginStart="10dp"
+        android:background="@drawable/card_bg4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:orientation="vertical"
         android:paddingLeft="20dp">
 
         <TextView
+            android:layout_marginTop="10dp"
             android:id="@+id/userName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="22dp"
             android:layout_marginBottom="14dp"
             android:text="@string/name"
-            android:textSize="26sp" />
+            android:textSize="20sp" />
 
         <TextView
+            android:layout_marginTop="-12dp"
             android:id="@+id/userPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/userPhone"
-            android:textSize="20sp" />
-
+            android:textSize="14sp" />
+<View
+    android:layout_marginEnd="30dp"
+    android:layout_marginTop="25dp"
+    android:background="#2C2A2A"
+    android:layout_width="match_parent"
+    android:layout_height="1dp"/>
     </LinearLayout>
 </LinearLayout>
