--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,12 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+        <androidx.cardview.widget.CardView
+            android:layout_width="60dp"
+            app:cardCornerRadius="10dp"
+            android:layout_height="60dp"
             android:contentDescription="@string/useravatar"
-            android:src="@drawable/ic_launcher_background" />
+            android:foreground="@drawable/img8"/>
 
         <TextView
             android:layout_width="0dp"
@@ -35,10 +36,13 @@
             android:textStyle="bold" />
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:contentDescription="@string/useravatar"
-            android:src="@drawable/ic_launcher_background" />
+            android:padding="10dp"
+            android:src="@drawable/edit"
+            android:layout_width="60dp"
+            app:cardCornerRadius="10dp"
+            android:layout_height="60dp"
+            android:background="@drawable/card_bg"
+            android:contentDescription="@string/useravatar"/>
     </LinearLayout>
 
     <!--    SearchBar Layout-->
@@ -55,6 +59,7 @@
         app:layout_constraintTop_toBottomOf="@id/topAppBar">
 
         <com.google.android.material.textfield.TextInputEditText
+
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,13 +69,17 @@
 
     <!--    Last Seen Users List-->
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/last_seen_users_list"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_marginBottom="10dp"
+        android:layout_height="170dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@id/selectedLetter"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchBar" />
 
     <!--    Selected Letter layout-->
@@ -88,10 +97,24 @@
     <!--    Users List Layout-->
 
     <ListView
-  android:id="@+id/usersList"
-        android:layout_width="match_parent"
+        android:divider="@null"
+        android:id="@+id/usersList"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:paddingStart="16dp"
+        app:layout_constraintTop_toBottomOf="@id/selectedLetter"
+        tools:ignore="MissingConstraints,RtlSymmetry" />
+
+    <ListView
+        android:layout_marginTop="10dp"
+        android:divider="@null"
+        android:layout_marginEnd="5dp"
+        android:id="@+id/lettersScroll"
+        android:layout_marginStart="5dp"
+        android:layout_width="10dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toRightOf="@id/usersList"
         app:layout_constraintTop_toBottomOf="@id/selectedLetter" />
 </androidx.constraintlayout.widget.ConstraintLayout>
