--- a/app/src/main/res/layout/last_seen_user_item_layout.xml
+++ b/app/src/main/res/layout/last_seen_user_item_layout.xml
@@ -1,7 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="120dp"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="10dp"
+    android:orientation="vertical">
 
+    <androidx.cardview.widget.CardView
+        android:scaleType="centerInside"
+        android:id="@+id/userImg"
+        app:cardCornerRadius="10dp"
+        android:foreground="@drawable/img8"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/card_bg3"
+        android:elevation="0dp"
+        android:src="@drawable/img8" />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:text="@string/name"
+        android:textSize="20sp"
+        tools:ignore="RtlSymmetry" />
+
+    <TextView
+        android:id="@+id/minutes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:text="@string/_40_minutes_ago"
+        android:textSize="12sp" />
 </LinearLayout>
